--- a/package.json
+++ b/package.json
@@ -11,24 +11,28 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "input-mask": "^1.1.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.34.0",
+    "eslint": "^8.57.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.2.0",
     "sass": "^1.58.0",
     "typescript": "^4.9.5",
+    "typescript-eslint": "^7.9.0",
     "vite": "^4.1.0",
     "vite-plugin-eslint": "^1.8.1"
   }
